navigation designing done

--- a/quiz.html
+++ b/quiz.html
@@ -8,11 +8,22 @@
 </head>
 
 <body>
-  <nav>
-    <a href="isTriangle.html">Is Triangle?</a>
-    <a href="quiz.html">Triangle Quiz</a>
-    <a href="hypotenuse.html">Calculate Hypotenuse</a>
-    <a href="triangle_Area.html">Calculate Area</a>
+  <nav class="nav-class">
+    <div class="about">Fun with Triangle</div>
+      <ul>
+        <li>
+          <a href="isTriangle.html">Is_Triangle?</a>
+        </li>
+        <li>
+          <a class="link-active" href="quiz.html">Triangle_Quiz</a>
+        </li>
+        <li>
+          <a href="hypotenuse.html">Calculate_Hypotenuse</a>
+        </li>
+        <li>
+          <a href="triangle_Area.html">Calculate_Area</a>
+        </li>
+      </ul>
   </nav>
   <main class="container">
     <h1 class="heading">Quiz on triangles</h1>
