all designing done

--- a/isTriangle.html
+++ b/isTriangle.html
@@ -25,6 +25,9 @@
     </nav>
     <main class="container">
       <h1>Angles of triangle</h1>
+      <div class="formula">
+        Is valid Triangle only if (a+b+c)=180; where a>0,b>0,c>0
+      </div>
       <label for="input-box">Angle1(in degrees)</label>
       <input class="input-box"type="number">
       <label for="input-box">Angle2(in degrees)</label>
