--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -12,16 +12,16 @@
     <div class="about">Fun with Triangle</div>
       <ul>
         <li>
-          <a href="isTriangle.html">Is_Triangle?</a>
+          <a href="../Is_triangle/isTriangle.html">Is_Triangle?</a>
         </li>
         <li>
-          <a class="link-active" href="quiz.html">Triangle_Quiz</a>
+          <a class="link-active" href="/">Triangle_Quiz</a>
         </li>
         <li>
-          <a href="hypotenuse.html">Calculate_Hypotenuse</a>
+          <a href="../Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
         </li>
         <li>
-          <a href="triangle_Area.html">Calculate_Area</a>
+          <a href="../Triangle_area/triangle_Area.html">Calculate_Area</a>
         </li>
       </ul>
   </nav>
