--- a/Is_triangle/isTriangle.html
+++ b/Is_triangle/isTriangle.html
@@ -2,44 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Calculate Area</title>
-    <link rel="stylesheet" href="triangle_Area.css">
+    <title>Is Triangle</title>
+    <link rel="stylesheet" href="isTriangle.css">
   </head>
   <body>
     <nav class="nav-class">
       <div class="about">Fun with Triangle</div>
         <ul>
           <li>
-            <a href="isTriangle.html">Is_Triangle?</a>
+            <a class="link-active" href="/">Is_Triangle?</a>
           </li>
           <li>
-            <a  href="quiz.html">Triangle_Quiz</a>
+            <a href="../Quiz/quiz.html">Triangle_Quiz</a>
           </li>
           <li>
-            <a href="hypotenuse.html">Calculate_Hypotenuse</a>
+            <a href="../Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
           </li>
           <li>
-            <a class="link-active" href="triangle_Area.html">Calculate_Area</a>
+            <a href="../Triangle_area/triangle_Area.html">Calculate_Area</a>
           </li>
         </ul>
     </nav>
     <main class="container">
-      <h1>Calculate Area of Triangle</h1>
+      <h1>Angles of triangle</h1>
       <div class="formula">
-        Area of Triangle(Heron's formula)= sqrt(s*(s-a)*(s-b)*(s-c))
-        <p>where s=(a+b+c)/2</p>
+        Is valid Triangle only if (a+b+c)=180; where a>0,b>0,c>0
       </div>
-      <label for="input-box">Enter first side(in cm)</label>
+      <label for="input-box">Angle1(in degrees)</label>
       <input class="input-box"type="number">
-      <label for="input-box">Enter second side(in cm)</label>
+      <label for="input-box">Angle2(in degrees)</label>
       <input class="input-box"type="number">
-      <label for="input-box">Enter third side(in cm)</label>
+      <label for="input-box">Angle3(in degrees)</label>
       <input class="input-box"type="number">
-      <button id="Area-btn" type="button" name="button">Calculate Area</button>
+      <button id="isTrainagle-btn" type="button" name="button">Is Triangle?</button>
       <p id="output"></p>
-      <script src="triangle_Area.js" charset="utf-8"></script>
     </main>
-
+    <script src="isTriangle.js" charset="utf-8"></script>
   </body>
   <footer class="footer-class">
     <a class="links" href="https://github.com/Omkar38-hub" target="_blank">
