fix and testing done

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Triangle Quiz</title>
-  <link rel="stylesheet" href="quiz.css">
+  <link rel="stylesheet" href="./Quiz/quiz.css">
 </head>
 
 <body>
@@ -12,16 +12,16 @@
     <div class="about">Fun with Triangle</div>
       <ul>
         <li>
-          <a href="../Is_triangle/isTriangle.html">Is_Triangle?</a>
+          <a href="./Is_triangle/isTriangle.html">Is_Triangle?</a>
         </li>
         <li>
-          <a class="link-active" href="/">Triangle_Quiz</a>
+          <a class="link-active" href="quiz.html">Triangle_Quiz</a>
         </li>
         <li>
-          <a href="../Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
+          <a href="./Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
         </li>
         <li>
-          <a href="../Triangle_area/triangle_Area.html">Calculate_Area</a>
+          <a href="./Triangle_area/triangle_Area.html">Calculate_Area</a>
         </li>
       </ul>
   </nav>
@@ -161,7 +161,7 @@
     <h1 id="output"></h1>
   </main>
 
-  <script src="quiz.js" charset="utf-8"></script>
+  <script src="./Quiz/quiz.js" charset="utf-8"></script>
 </body>
 <footer class="footer-class">
   <a class="links" href="https://github.com/Omkar38-hub" target="_blank">
