--- a/Is_triangle/isTriangle.html
+++ b/Is_triangle/isTriangle.html
@@ -10,10 +10,10 @@
       <div class="about">Fun with Triangle</div>
         <ul>
           <li>
-            <a class="link-active" href="/">Is_Triangle?</a>
+            <a class="link-active" href="../Is_triangle/isTriangle.html">Is_Triangle?</a>
           </li>
           <li>
-            <a href="../Quiz/quiz.html">Triangle_Quiz</a>
+            <a href="../quiz.html">Triangle_Quiz</a>
           </li>
           <li>
             <a href="../Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
@@ -41,13 +41,13 @@
   </body>
   <footer class="footer-class">
     <a class="links" href="https://github.com/Omkar38-hub" target="_blank">
-      <img src="images/github-brands.svg" alt="github">
+      <img src="../images/github-brands.svg" alt="github">
     </a>
     <a class="links" href="https://www.linkedin.com/in/omkar-kumar-296547191/" target="_blank">
-      <img src="images/linkedin-brands.svg" alt="linkedin">
+      <img src="../images/linkedin-brands.svg" alt="linkedin">
     </a>
     <a class="links" href="https://www.instagram.com/omkar_038/" target="_blank">
-      <img src="images/instagram-brands.svg" alt="instagram">
+      <img src="../images/instagram-brands.svg" alt="instagram">
     </a>
     <p class="copywrite">© 2021 Omkar.</p>
   </footer>
