refactor- add appropriate path

--- a/Hypotenuse/hypotenuse.html
+++ b/Hypotenuse/hypotenuse.html
@@ -13,7 +13,7 @@
             <a href="../Is_triangle/isTriangle.html">Is_Triangle?</a>
           </li>
           <li>
-            <a href="../quiz.html">Triangle_Quiz</a>
+            <a href="../index.html">Triangle_Quiz</a>
           </li>
           <li>
             <a class="link-active" href="../Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
