--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="./Is_triangle/isTriangle.html">Is_Triangle?</a>
         </li>
         <li>
-          <a class="link-active" href="quiz.html">Triangle_Quiz</a>
+          <a class="link-active" href="index.html">Triangle_Quiz</a>
         </li>
         <li>
           <a href="./Hypotenuse/hypotenuse.html">Calculate_Hypotenuse</a>
